--- a/app.yaml
+++ b/app.yaml
@@ -7,3 +7,21 @@ handlers:
 
   - url: /.*
     script: auto # Route all other requests to your main.py application
+
+
+#dinie part
+    runtime: python39
+    handlers:
+      - url: /static
+        static_dir: static
+      - url: /.*
+        script: auto
+
+        runtime: python39
+        entrypoint: python main.py
+
+        handlers:
+          - url: /static
+            static_dir: static
+          - url: /.*
+            script: auto
